# kraken-waybar

./: Cargo.toml  README.md  install.sh
src/: error.rs  kraken.rs  main.rs  ticker.rs  waybar.rs
