[package]
name = "kraken-waybar"
description = "Custom waybar module to show live crypto prices from the kraken websocket api."
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["kraken", "waybar", "wayland", "crypto", "cryptocurrency"]
categories = ["command-line-utilities", "finance"]

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
serde_with = { version = "3.12.0", features = ["macros"] }
websocket = "0.27.1"
